# videoindex_qa_agent

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: test-and-publish.yml
data/: longtvqa.yaml
src/: agent.py  server.py
tests/: conftest.py
